--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "learn_npm_packages",
   "version": "1.0.0",
   "description": "Create npm packages",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+    "test": "jest",
+    "build": "babel src -d dist"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,9 @@
   },
   "homepage": "https://github.com/JeevanOM/learn_npm_packages#readme",
   "devDependencies": {
+    "@babel/cli": "^7.23.9",
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
     "jest": "^29.7.0"
   }
 }
