--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "learn_npm_packages",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Create npm packages",
   "main": "dist/index.js",
   "scripts": {
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@babel/cli": "^7.23.9",
     "@babel/core": "^7.23.9",
+    "@babel/plugin-proposal-export-default-from": "^7.23.3",
     "@babel/preset-env": "^7.23.9",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0"
