--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Create npm packages",
   "main": "dist/index.js",
   "scripts": {
+    "lint:all": "eslint '**/*.js' --ignore-pattern node_modules/",
+    "lint:src": "eslint 'src/**/*.js'",
+    "lint:file": "eslint",
     "test": "jest",
     "build": "babel src -d dist"
   },
@@ -28,6 +31,9 @@
     "@babel/plugin-proposal-export-default-from": "^7.23.3",
     "@babel/preset-env": "^7.23.9",
     "babel-jest": "^29.7.0",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
     "jest": "^29.7.0"
   }
 }
